Bug 1819328 - Message filters list wasn't getting scrollbar. r=aleca
Also fix some issues with resizing sideways when changing account.

Differential Revision: https://phabricator.services.mozilla.com/D172367

--HG--
extra : rebase_source : fbc2e759676a594ed5fbe28a11634d57a74bd620
extra : amend_source : 67f1fa5a521320640ecdec7a13c398a332fcfe43

--- a/mail/themes/shared/mail/filterDialog.css
+++ b/mail/themes/shared/mail/filterDialog.css
@@ -29,6 +29,15 @@
   --richlist-button-background: -moz-Dialog;
 }
 
+#filterListBox {
+  min-width: 0;
+  min-height: 0;
+}
+
+#filterList {
+  height: 340px;
+}
+
 #searchBox {
   max-width: 30ch;
 }
@@ -45,6 +54,7 @@ richlistitem {
 
 richlistitem > checkbox {
   width: 100px;
+  min-width: 100px;
   margin: 0;
   -moz-user-focus: none;
 }
